--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -10,27 +10,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Create Executable
+        uses: sayyid5416/pyinstaller@v1
         with:
-          python-version: '3.x'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pyinstaller
-          pip install -r requirements.txt
-
-      - name: Build CLI App
-        run: |
-          pyinstaller --onefile --icon=app.ico --name=blum-clicker start.py
-
-      - name: Upload to Release
-        uses: JasonEtco/upload-to-release@master
-        with:
-          args: dist/blum-clicker.exe
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          spec: 'start.py'
+          python_ver: '3.10.11'
+          upload_exe_with_name: 'BlumClicker'
+          options: '--onefile, --icon "app.ico", --name "Blum Clicker"'
