--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -10,10 +10,24 @@ jobs:
     runs-on: windows-latest
 
     steps:
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10.11"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pyinstaller
+          pip install -r requirements.txt
       - name: Create Executable
         uses: sayyid5416/pyinstaller@v1
         with:
-          spec: 'start.py'
-          python_ver: '3.10.11'
-          upload_exe_with_name: 'BlumClicker'
+          spec: "start.py"
+          python_ver: "3.10.11"
+          upload_exe_with_name: "BlumClicker"
           options: '--onefile, --icon "app.ico", --name "Blum Clicker"'
+      - name: Run Push to Release
+        uses: TheAhmedGad/push-to-release@main
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          binary-path: ./dist/BlumClicker.exe
